--- a/game.html
+++ b/game.html
@@ -54,6 +54,10 @@
                 <span class="icon iconfont icon-youhui1"></span>
                 <span class="tab-label" data-i18n-text="navpromo">promo</span>
             </a>
+            <a class="tab-item external active" href="game.html">
+                <span class="icon iconfont icon-youxi"></span>
+                <span class="tab-label" data-i18n-text="navGames">game</span>
+            </a>
             <a class="tab-item external" href="#">
                 <span class="icon iconfont icon-chat" ></span>
                 <span class="tab-label" data-i18n-text="navliveChat">live chat</span>
@@ -87,66 +91,26 @@
 
             <div class="content-block"  style="margin-top: 0;">
                 <div class="buttons-tab sub-tab-2">
-                    <a href="#gameHall" class="tab-link active button" data-i18n-text="gameHall">电玩厅</a>
-                    <a href="#bbin" class="tab-link button">BBIN</a>
                     <a href="#mg" class="tab-link button">MG</a>
                     <a href="#pt" class="tab-link button">PT</a>
+                    <a href="#hb" class="tab-link button">HB</a>
                     <a href="#ttg" class="tab-link button">TTG</a>
                     <a href="#png" class="tab-link button">PNG</a>
-                    <a href="#hb" class="tab-link button">HB</a>
+                    <a href="#ks918" class="tab-link button">918kiss</a>
                 </div>
                 <div class="tabs">
-                    <!-- 筛选 -->
-                    <div class="game-filter">
-                        <a class="active" href="javascript:void(0)" data-i18n-text="jackpot">奖池游戏</a>
-                        <a href="javascript:void(0)" data-i18n-text="classic">经典游戏</a>
-                        <a href="javascript:void(0)" data-i18n-text="videoPoker">电子扑克</a>
-                        <a href="javascript:void(0)" data-i18n-text="tableGames">桌台游戏</a>
-                    </div>
-                    <!--/. 筛选 -->
 
-                    <!-- 电玩厅 -->
-                    <div id="gameHall" class="tab active">
-                        <div class="content-block">
-                            <div class="game-list">
-                                <ul class="">
-                                    <li><a href="game.html" target="_blank"><img src="images/game-img/lhdb.jpg" alt=""></a><span>连环夺宝</span></li>
-                                    <li><a href="#"><img src="images/game-img/tgpd.jpg" alt=""></a><span>糖果派对</span></li>
-                                    <li><a href="#"><img src="images/game-img/buyu.jpg" alt=""></a><span>捕鱼游戏</span></li>
-                                    <li><a href="#"><img src="images/game-img/bsmz.jpg" alt=""></a><span>宝石迷阵</span></li>
-                                    <li><a href="#"><img src="images/game-img/sgj.jpg" alt=""></a><span>水果机</span></li>
-                                    <li><a href="#"><img src="images/game-img/bcbm.jpg" alt=""></a><span>奔驰宝马</span></li>
-                                    <li><a href="#"><img src="images/game-img/slwh.jpg" alt=""></a><span>森林舞会</span></li>
-                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>飞禽走兽</span></li>
-                                    <li><a href="#"><img src="images/game-img/byds.jpg" alt=""></a><span>捕蝇大赛</span></li>
-                                    <li><a href="#"><img src="images/game-img/fkhz.jpg" alt=""></a><span>疯狂猴子</span></li>
-                                    <li><a href="#"><img src="images/game-img/jssm.jpg" alt=""></a><span>极速赛马</span></li>
-                                    <li><a href="#"><img src="images/game-img/bqtp.jpg" alt=""></a><span>冰球突破</span></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!--/. 电玩厅 -->
-                    <!-- bbin -->
-                    <div id="bbin" class="tab">
-                        <div class="content-block">
-                            <div class="game-list">
-                                <ul>
-                                    <li><a href="#"><img src="images/game-img/sgj.jpg" alt=""></a><span>水果机</span></li>
-                                    <li><a href="#"><img src="images/game-img/bcbm.jpg" alt=""></a><span>奔驰宝马</span></li>
-                                    <li><a href="#"><img src="images/game-img/slwh.jpg" alt=""></a><span>森林舞会</span></li>
-                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>飞禽走兽</span></li>
-                                    <li><a href="#"><img src="images/game-img/byds.jpg" alt=""></a><span>捕蝇大赛</span></li>
-                                    <li><a href="#"><img src="images/game-img/fkhz.jpg" alt=""></a><span>疯狂猴子</span></li>
-                                    <li><a href="#"><img src="images/game-img/jssm.jpg" alt=""></a><span>极速赛马</span></li>
-                                    <li><a href="#"><img src="images/game-img/bqtp.jpg" alt=""></a><span>冰球突破</span></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!--/. bbin -->
+
                     <!-- mg -->
-                    <div id="mg" class="tab">
+                    <div id="mg" class="tab active">
+                        <!-- 筛选 -->
+                        <div class="game-filter">
+                            <a class="active" href="javascript:void(0)" data-i18n-text="jackpot">奖池游戏</a>
+                            <a href="javascript:void(0)" data-i18n-text="classic">经典游戏</a>
+                            <a href="javascript:void(0)" data-i18n-text="videoPoker">电子扑克</a>
+                            <a href="javascript:void(0)" data-i18n-text="tableGames">桌台游戏</a>
+                        </div>
+                        <!--/. 筛选 -->
                         <div class="content-block">
                             <div class="game-list">
                                 <ul>
@@ -219,6 +183,30 @@
                         </div>
                     </div>
                     <!--/. hb -->
+                    <!-- 918kiss 20200830 -->
+                    <div id="ks918" class="tab">
+                        <div class="content-block">
+                            <div class="real-wrap">
+                                <div class="real-item">
+                                    <img src="images/game-img-banner/banner-fish.jpg" alt="">
+                                    <div class="real-item-link clearfix">
+                                        <a class="" href="#"><i class="iconfont icon-xiazai"></i> <span>下载918KISS-APP</span></a>
+                                    </div>
+                                    <div class="real-item-link clearfix">
+                                        <a href="#"> <i class="iconfont icon-bangzhu"></i> <span>918KISS 登入教程</span></a>
+                                    </div>
+                                    <div class="real-item-link clearfix">
+                                        <a href="#"><i class="iconfont icon-xianjin"></i> <span>转入所有额度</span></a>
+                                    </div>
+                                </div>
+                                <div class="" style="color: #fff;padding-top: 0.5rem;padding-left: 1rem;">
+                                    <p>918kiss账号：01466108773 <a href="" style="padding-left: 1rem;">复制</a></p>
+                                    <p>918kiss密码：TpskoNyYdb2 <a href="" style="padding-left: 1rem;">复制</a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--/. 918kiss -->
                 </div>
             </div>
 
