--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                 <span class="icon iconfont icon-youhui1"></span>
                 <span class="tab-label" data-i18n-text="navpromo">promo</span>
             </a>
+            <a class="tab-item external" href="game.html">
+                <span class="icon iconfont icon-youxi"></span>
+                <span class="tab-label" data-i18n-text="navGames">game</span>
+            </a>
             <a class="tab-item external" href="#">
                 <span class="icon iconfont icon-chat" ></span>
                 <span class="tab-label" data-i18n-text="navliveChat">live chat</span>
