index add button(register and login)

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                 </form>
             </div>
             <!--/. 搜索 -->
+
+            <!-- 注册登录按钮 -->
+            <div class="index-login-btn-row">
+                <a href=""><i class="iconfont icon-bi"></i> Register</a>
+                <a href=""><i class="iconfont icon-denglu"></i> Login</a>
+            </div>
+            <!--/. 注册登录按钮 -->
+
             <!-- Slider -->
             <div class="swiper-container" data-space-between='0'>
                 <div class="swiper-wrapper">
