fix: fix some bugs

--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/mobile.css?version=1.0.1">
     <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
 <body>
@@ -114,9 +114,9 @@
                         <div class="content-block">
                             <div class="game-list">
                                 <ul>
-                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>飞禽走兽</span></li>
+                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>lianhuanduobaoduoahnwjh</span></li>
                                     <li><a href="#"><img src="images/game-img/byds.jpg" alt=""></a><span>捕蝇大赛</span></li>
-                                    <li><a href="#"><img src="images/game-img/fkhz.jpg" alt=""></a><span>疯狂猴子</span></li>
+                                    <li><a href="#"><img src="images/game-img/fkhz.jpg" alt=""></a><span>lianhuanduobaoduoahnwjh</span></li>
                                     <li><a href="#"><img src="images/game-img/jssm.jpg" alt=""></a><span>极速赛马</span></li>
                                     <li><a href="#"><img src="images/game-img/bqtp.jpg" alt=""></a><span>冰球突破</span></li>
                                 </ul>
@@ -160,8 +160,8 @@
                         <div class="content-block">
                             <div class="game-list">
                                 <ul>
-                                    <li><a href="#"><img src="images/game-img/slwh.jpg" alt=""></a><span>森林舞会</span></li>
-                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>飞禽走兽</span></li>
+                                    <li><a href="#"><img src="images/game-img/slwh.jpg" alt=""></a><span>senlinwuhuihsuhwnhdsw</span></li>
+                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>senlinwuhuihsuhwnhdsw</span></li>
                                     <li><a href="#"><img src="images/game-img/byds.jpg" alt=""></a><span>捕蝇大赛</span></li>
                                     <li><a href="#"><img src="images/game-img/fkhz.jpg" alt=""></a><span>疯狂猴子</span></li>
                                 </ul>
@@ -175,9 +175,9 @@
                             <div class="game-list">
                                 <ul>
 
-                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>飞禽走兽</span></li>
+                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>lianhuanduobaoduoahnwjh</span></li>
                                     <li><a href="#"><img src="images/game-img/byds.jpg" alt=""></a><span>捕蝇大赛</span></li>
-                                    <li><a href="#"><img src="images/game-img/fkhz.jpg" alt=""></a><span>疯狂猴子</span></li>
+                                    <li><a href="#"><img src="images/game-img/fkhz.jpg" alt=""></a><span>lianhuanduobaoduoahnwjh</span></li>
                                 </ul>
                             </div>
                         </div>
