--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/light7-swiper.css">
 
     <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/mobile.css?version=0.0.1">
+    <link rel="stylesheet" href="css/mobile.css?version=0.0.2">
     <!--<link rel="stylesheet" href="css/animate.css">-->
 
     <!-- endbuild -->
@@ -87,7 +87,7 @@
             <div class="search-wrap clearfix">
                 <form action="">
                     <input type="text" class="search-input" data-i18n-placeholder="searchGamesPlaceholder"  placeholder="游戏名称">
-                    <button class="search-btn"><i class="iconfont icon-sousuo"></i></button>
+                    <button id="searchBtn" class="search-btn" onclick="search_submit(1);"><i class="iconfont icon-sousuo"></i></button>
                 </form>
             </div>
             <!--/. 搜索 -->
@@ -153,7 +153,7 @@
                     <div class="game-list">
                         <ul class="">
                             <li><a href="game.html" target="_blank"><img src="images/game-img/lhdb.jpg"
-                                                                         alt=""></a><span>连环夺宝</span></li>
+                                                                         alt=""></a><span>lianhuanduobaoduoahnwjh</span></li>
                             <li><a href="http://www.163.com"><img src="images/game-img/tgpd.jpg"
                                                                   alt=""></a><span>糖果派对</span></li>
                             <li><a href="#"><img src="images/game-img/buyu.jpg" alt=""></a><span>捕鱼游戏</span></li>
