fix: fix some bugs

--- a/msg_subscribe.html
+++ b/msg_subscribe.html
@@ -26,12 +26,15 @@
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
-        <div class="content">
-            <p class="buttons-row">
+        <div class="content" style="overflow-x: hidden">
+            <div class="content-block" id="userinfo_tab">
+                <p class="buttons-row">
                 <a href="user_info.html" class="button " data-i18n-text="basicData"></a>
                 <a href="bind_bank.html" class="button" data-i18n-text="bankCard"></a>
                 <a href="msg_subscribe.html" class="button active" data-i18n-text="SMSsubscription"></a>
             </p>
+            </div>
+
             <!-- 列表 -->
             <div class="list-block">
                 <ul>
