--- a/state-404.html
+++ b/state-404.html
@@ -22,6 +22,7 @@
         <div class="content ">
                     <div class="stat-img-wrap">
                         <img src="images/404.png" alt="">
+                        <p style="color: #fff;" data-i18n-text="err404">No Files Found</p>
                         <a class="button "  href="index.html">home</a>
                     </div>
 
