fix: fix some bugs

--- a/reg.html
+++ b/reg.html
@@ -47,7 +47,22 @@
 
 
         <div class="content ">
-            <div class="login-wrap reg-wrap">
+            <div class="login-wrap reg-wrap" style="background-color: #0c0c0c;">
+                <!-- game 分类 -->
+                <div class="game-category">
+                    <ul>
+                        <li><a class="" href="game.html"><i class="iconfont icon-laohuji1"></i></a><span data-i18n-text="slot">Slots</span></li>
+                        <li><a class="" href="#"><i class="iconfont icon-duchangpuke"></i></a><span data-i18n-text="LiveCasino">Live Casino</span></li>
+                        <li><a class="" href="#"><i class="iconfont icon-youxi"></i></a><span data-i18n-text="ESports">E-Sports</span></li>
+                        <li><a class="" href="#"><i class="iconfont icon-yu"></i></a><span data-i18n-text="Fishing">Fishing</span></li>
+
+                        <li><a class="" href="#"><i class="iconfont icon-tiyu"></i></a><span data-i18n-text="sport">Sport</span></li>
+                        <li><a class="" href="#"><i class="iconfont icon-caipiao2"></i></a><span data-i18n-text="Lottery">Lottery</span></li>
+                        <li><a class="" href="#"><i class="iconfont icon-ji"></i></a><span data-i18n-text="Cockfight">Cockfight</span></li>
+                        <li><a class="" href="#"><i class="iconfont icon-qipai"></i></a><span data-i18n-text="poker">Poker</span></li>
+                    </ul>
+                </div>
+                <!-- /. game 分类 -->
                 <form name="realAccount" id="realAccount" action="" method="post">
 
                     <div class="row" style="overflow: inherit">
