fix: fix some bugs

--- a/game.html
+++ b/game.html
@@ -14,7 +14,15 @@
     <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
 <body>
-
+<style>
+    .content-block{padding:0 .1rem;}
+    .button{padding:0 .2rem;}
+    .content-block .show{display: block}
+    .game-list ul:before,.game-list ul:after{
+        content:none;
+    }
+    .game-list li{overflow: hidden;}
+</style>
 <div class="page-group">
     <div class="page page-current">
         <!-- 顶部下载提示 -->
@@ -129,15 +137,15 @@
                         <div class="content-block">
                             <div class="game-list">
                                 <ul>
-                                    <li><a href="#"><img src="images/game-img/bsmz.jpg" alt=""></a><span>宝石迷阵</span></li>
-                                    <li><a href="#"><img src="images/game-img/sgj.jpg" alt=""></a><span>水果机</span></li>
-                                    <li><a href="#"><img src="images/game-img/bcbm.jpg" alt=""></a><span>奔驰宝马</span></li>
-                                    <li><a href="#"><img src="images/game-img/slwh.jpg" alt=""></a><span>森林舞会</span></li>
-                                    <li><a href="#"><img src="images/game-img/fqzs.jpg" alt=""></a><span>飞禽走兽</span></li>
-                                    <li><a href="#"><img src="images/game-img/byds.jpg" alt=""></a><span>捕蝇大赛</span></li>
-                                    <li><a href="#"><img src="images/game-img/fkhz.jpg" alt=""></a><span>疯狂猴子</span></li>
-                                    <li><a href="#"><img src="images/game-img/jssm.jpg" alt=""></a><span>极速赛马</span></li>
-                                    <li><a href="#"><img src="images/game-img/bqtp.jpg" alt=""></a><span>冰球突破</span></li>
+                                    <li><a href="#"><img src="https://www.fu8898.com/m/common/images/bbin/5171.png" alt=""></a><span>宝石迷阵</span></li>
+                                    <li><a href="#"><img src="images/game-img/sgj.jpghttps://www.fu8898.com/m/common/images/yoplay/YFR.jpg" alt=""></a><span>水果机</span></li>
+                                    <li><a href="#"><img src="https://www.fu8898.com/m/common/images/yoplay/YFR.jpg" alt=""></a><span>奔驰宝马</span></li>
+                                    <li><a href="#"><img src="https://www.fu8898.com/m/common/images/ag/SB28_535.jpg" alt=""></a><span>森林舞会</span></li>
+                                    <li><a href="#"><img src="https://www.fu8898.com/m/common/images/ag/FRU_501.jpg" alt=""></a><span>飞禽走兽</span></li>
+                                    <li><a href="#"><img src="https://www.fu8898.com/m/common/images/yoplay/YMBF.jpg" alt=""></a><span>捕蝇大赛</span></li>
+                                    <li><a href="#"><img src="https://www.fu8898.com/m/common/images/bbin/5171.png" alt=""></a><span>疯狂猴子</span></li>
+                                    <li><a href="#"><img src="images/game-img/jssm.jpgimages/game-img/sgj.jpghttps://www.fu8898.com/m/common/images/yoplay/YFR.jpg" alt=""></a><span>极速赛马</span></li>
+                                    <li><a href="#"><img src="https://www.fu8898.com/m/common/images/bbin/5171.png" alt=""></a><span>冰球突破</span></li>
                                 </ul>
                             </div>
                         </div>
