--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                             <li><a href="#"><img src="images/game-img/bqtp.jpg" alt=""></a><span>冰球突破</span></li>
                         </ul>
                     </div>
+                    <div class="clearfix"></div>
                     <a href="game.html" class="btn-gameroom disable-router" target="_self">
                         <svg class="icon" aria-hidden="true">
                             <use xlink:href="#icon-youxi1"></use>
@@ -247,6 +248,8 @@
     <!-- 左侧栏 -->
     <div class="panel panel-left panel-cover">
         <div class="panel-nav">
+            <div class="panel-nav-logo"><img src="images/header-logo.png" alt=""></div>
+
             <ul>
                 <li><a class="close-panel" href="index.html"><i class="iconfont icon-home"></i><span data-i18n-text="sidenavHome">首页</span></a></li>
                 <li><a class="close-panel" href="prefer.html"><i class="iconfont icon-youhui"></i><span data-i18n-text="sidenavPrefer">优惠活动</span></a></li>
