fix: 注册页面样式调整

--- a/index.html
+++ b/index.html
@@ -248,7 +248,10 @@
     <!-- 左侧栏 -->
     <div class="panel panel-left panel-cover">
         <div class="panel-nav">
-            <div class="panel-nav-logo"><img src="images/header-logo.png" alt=""></div>
+            <!-- 20200927 侧栏新增logo -->
+            <div class="panel-nav-logo">
+                <img src="images/header-logo.png" alt="">
+            </div>
 
             <ul>
                 <li><a class="close-panel" href="index.html"><i class="iconfont icon-home"></i><span data-i18n-text="sidenavHome">首页</span></a></li>
