fix: 注册页面样式调整

--- a/records.html
+++ b/records.html
@@ -28,6 +28,7 @@
         <div class="content">
             <div class="content-padded ">
                 <form action="">
+
                     <div class="border-input">
                         <select>
                             <option data-i18n-text="PreferentialRecord"></option>
@@ -35,6 +36,15 @@
                             <option data-i18n-text="WithdrawalRecord"></option>
                         </select>
                     </div>
+
+                    <div class="border-input">
+                        <select>
+                            <option data-i18n-text="PreferentialRecord"></option>
+                            <option data-i18n-text="RechargeRecord"></option>
+                            <option data-i18n-text="WithdrawalRecord"></option>
+                        </select>
+                    </div>
+
                     <div class="border-input row">
                         <div class="col-50"><input type="text" id='startTime' placeholder="Start time"/></div>
                         <div class="col-50"><input type="text" id='endTime' placeholder="End time"/></div>
