feat: help.html?open=918kiss 根据参数跳转到帮助中心制定位置

--- a/game.html
+++ b/game.html
@@ -201,7 +201,7 @@
                                         <a class="" href="#"><i class="iconfont icon-xiazai"></i> <span>下载918KISS-APP</span></a>
                                     </div>
                                     <div class="real-item-link clearfix">
-                                        <a href="#"> <i class="iconfont icon-bangzhu"></i> <span>918KISS 登入教程</span></a>
+                                        <a href="help.html?open=918kiss"> <i class="iconfont icon-bangzhu"></i> <span>918KISS 登入教程</span></a>
                                     </div>
                                     <div class="real-item-link clearfix">
                                         <a href="#"><i class="iconfont icon-xianjin"></i> <span>转入所有额度</span></a>
