feat: add goto top 方法

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <!-- Slider -->
             <div class="swiper-container" data-space-between='0'>
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide"><a href="#"><img src="images/banner-slide-1.jpg" alt=""></a></div>
+                    <div class="swiper-slide"><a href="#"><img src="images/banner-slide-0.png" alt=""></a></div>
                     <div class="swiper-slide"><a href="#"><img src="images/banner-slide-1.jpg" alt=""></a></div>
                     <div class="swiper-slide"><a href="#"><img src="images/banner-slide-1.jpg" alt=""></a></div>
                 </div>
