--- a/onlinepaystart.html
+++ b/onlinepaystart.html
@@ -219,6 +219,9 @@
                                                 <div class="item-input">
                                                     <input type="file"  placeholder="Upload Receipt"/>
                                                 </div>
+                                                <div style="position: absolute;right: 0;">
+                                                    <button style="background-color: #ff9b35;border-radius: 3px;width: 80px;color: #fff;height: 34px;border: none;">上传</button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
